created list item component + MDX update

--- a/src/stories/guide.stories.mdx
+++ b/src/stories/guide.stories.mdx
@@ -8,6 +8,7 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 1) create the doc page in the src/stories folder with the .stories.mdx extension.
 2) copy paste these first lines into the file:
+!!! DONT FORGET TO ADD A SPACE BETWEEN THESE 2 LINES!!!!!
 
 `import { Canvas, Meta, Story } from '@storybook/addon-docs';`
 `<Meta title="SectionName/DocPageName"/>`
