:sparkles: Text primitive now has a story

--- a/src/stories/Colors.Background.stories.mdx
+++ b/src/stories/Colors.Background.stories.mdx
@@ -120,52 +120,52 @@ import StackAlt from './assets/stackalt.svg';
 
   <belo-header size="2">color-background-brand</belo-header>  
   <belo-flex gap="32px">
-    <belo-storybook-color-box target-color="#FF385C" color="#FFFFFF" title="AA 3.51" subtitle="default" />
-    <belo-storybook-color-box target-color="#FFFFFF" color="#000000" title="AA 3.51" subtitle="white" border />
-    <belo-storybook-color-box target-color="#000000" color="#FFFFFF" title="AAA" subtitle="black" />
+    <belo-storybook-color-box target-color="#FF385C" color="#FFFFFF" BoxTitle="AA 3.51" subtitle="default" />
+    <belo-storybook-color-box target-color="#FFFFFF" color="#000000" BoxTitle="AA 3.51" subtitle="white" border />
+    <belo-storybook-color-box target-color="#000000" color="#FFFFFF" BoxTitle="AAA" subtitle="black" />
   </belo-flex>
 
   <belo-header size="2">color-background-secondary</belo-header>  
   <belo-flex gap="32px">
-    <belo-storybook-color-box target-color="#D70466" color="#FFFFFF" title="AA 5.12" subtitle="default" />
-    <belo-storybook-color-box target-color="#AA018B" color="#FFFFFF" title="AA 6.8" subtitle="magenta" />
-    <belo-storybook-color-box target-color="#410AA8" color="#FFFFFF" title="AAA" subtitle="violet" />
+    <belo-storybook-color-box target-color="#D70466" color="#FFFFFF" BoxTitle="AA 5.12" subtitle="default" />
+    <belo-storybook-color-box target-color="#AA018B" color="#FFFFFF" BoxTitle="AA 6.8" subtitle="magenta" />
+    <belo-storybook-color-box target-color="#410AA8" color="#FFFFFF" BoxTitle="AAA" subtitle="violet" />
   </belo-flex>
 
   <belo-header size="2">color-background</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#F7F7F7" color="#000000" title="AAA" subtitle="gray-25" />
-    <belo-storybook-color-box target-color="#EBEBEB" color="#000000" title="AAA" subtitle="gray-50" />
-    <belo-storybook-color-box target-color="#DDDDDD" color="#000000" title="AAA" subtitle="gray-100" />
-    <belo-storybook-color-box target-color="#B0B0B0" color="#000000" title="AAA" subtitle="gray-200" />
-    <belo-storybook-color-box target-color="#717171" color="#FFFFFF" title="AA 4.88" subtitle="gray-300" />
-    <belo-storybook-color-box target-color="#222222" color="#FFFFFF" title="AAA" subtitle="gray-400" />
+    <belo-storybook-color-box target-color="#F7F7F7" color="#000000" BoxTitle="AAA" subtitle="gray-25" />
+    <belo-storybook-color-box target-color="#EBEBEB" color="#000000" BoxTitle="AAA" subtitle="gray-50" />
+    <belo-storybook-color-box target-color="#DDDDDD" color="#000000" BoxTitle="AAA" subtitle="gray-100" />
+    <belo-storybook-color-box target-color="#B0B0B0" color="#000000" BoxTitle="AAA" subtitle="gray-200" />
+    <belo-storybook-color-box target-color="#717171" color="#FFFFFF" BoxTitle="AA 4.88" subtitle="gray-300" />
+    <belo-storybook-color-box target-color="#222222" color="#FFFFFF" BoxTitle="AAA" subtitle="gray-400" />
   </belo-flex>
 
   <belo-header size="2">color-background-error</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#C13515" color="#FFFFFF" title="AA 5.54" subtitle="default" />
-    <belo-storybook-color-box target-color="#FEF8F6" color="#000000" title="AAA" subtitle="highlight" />
+    <belo-storybook-color-box target-color="#C13515" color="#FFFFFF" BoxTitle="AA 5.54" subtitle="default" />
+    <belo-storybook-color-box target-color="#FEF8F6" color="#000000" BoxTitle="AAA" subtitle="highlight" />
   </belo-flex>
     
   <belo-header size="2">color-background-destructive</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#C13515" color="#FFFFFF" title="AA 5.54" subtitle="unlisted" />
+    <belo-storybook-color-box target-color="#C13515" color="#FFFFFF" BoxTitle="AA 5.54" subtitle="unlisted" />
   </belo-flex>
 
   <belo-header size="2">color-background-warning</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#E07912" color="#000000" title="AA 5.23" subtitle="default" />
+    <belo-storybook-color-box target-color="#E07912" color="#000000" BoxTitle="AA 5.23" subtitle="default" />
   </belo-flex>
 
   <belo-header size="2">color-background-success</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#008A05" color="#FFFFFF" title="AA 4.52" subtitle="success" />
+    <belo-storybook-color-box target-color="#008A05" color="#FFFFFF" BoxTitle="AA 4.52" subtitle="success" />
   </belo-flex>
 
   <belo-header size="2">color-icon-background</belo-header>  
   <belo-flex gap="32px" wrap="wrap">
-    <belo-storybook-color-box target-color="#222222" color="#FFFFFF" title="AAA" subtitle="default" />
+    <belo-storybook-color-box target-color="#222222" color="#FFFFFF" BoxTitle="AAA" subtitle="default" />
   </belo-flex>
 
 </belo-stack>
