--- a/src/stories/Colors.Border.stories.mdx
+++ b/src/stories/Colors.Border.stories.mdx
@@ -120,14 +120,14 @@ import StackAlt from './assets/stackalt.svg';
 
   <belo-header size="2">color-border</belo-header>  
   <belo-flex gap="32px">
-    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#DDDDDD" border-color="#DDDDDD" color="#000000" title="" subtitle="gray-100" border />
-    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#B0B0B0" border-color="#B0B0B0" color="#000000" title="" subtitle="gray-200" border />
-    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#222222" border-color="#222222" color="#000000" title="" subtitle="gray-400" border />
+    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#DDDDDD" border-color="#DDDDDD" color="#000000" boxTitle="" subtitle="gray-100" border />
+    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#B0B0B0" border-color="#B0B0B0" color="#000000" boxTitle="" subtitle="gray-200" border />
+    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#222222" border-color="#222222" color="#000000" boxTitle="" subtitle="gray-400" border />
   </belo-flex>
 
   <belo-header size="2">color-border-error</belo-header>  
   <belo-flex gap="32px">
-    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#C13515" border-color="#C13515" color="#000000" title="" subtitle="default" border />
+    <belo-storybook-color-box target-color="#FFFFFF" heading-color="#C13515" border-color="#C13515" color="#000000" boxTitle="" subtitle="default" border />
   </belo-flex>
 
 </belo-stack>
